# rust-web-mongodb-example

./: .gitignore  Cargo.toml  Makefile  README.md
src/: db.rs  error.rs  handler.rs  main.rs
