[package]
name = "rust-web-mongodb-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "1.0.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
